<resources>
    <string name="app_name">Sallefy</string>

    <!-- DEFAULT TRACK -->
    <string name="default_track_title">Título canción</string>
    <string name="default_track_author">Author/a</string>
    <string name="default_username">User</string>
    <string name="default_usernames">Users</string>
    <string name="default_playlists">Playlists</string>
    <string name="default_songs">Songs</string>
    <string name="default_genres">Genres</string>

    <!-- MAIN MENU -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search  songs, playlists or users…</string>
    <string name="menu_me">Me</string>
    <string name="menu_social">Social</string>

    <!-- ME MENU -->
    <string name="me_users">Users</string>
    <string name="me_songs">Songs</string>
    <string name="me_playlists">Playlists</string>
    <string name="me_add_song">Upload Song</string>
    <string name="me_add_playlist">Create playlist</string>



    <!-- FRAGMENTS (LABELS) -->
    <string name="fragment_playlists">Playlists</string>
    <string name="fragment_songs">Songs</string>

    <!-- ACTION -->
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_signUp">Sign Up</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_decline">Cancelar</string>
    <string name="action_advance_list">Mostrar Tracks (avanzado)</string>
    <string name="action_list">Mostrar Tracks</string>
    <string name="action_static_playback">Static URL\nPlayback</string>
    <string name="action_backend_playback">Backend Playback</string>
    <string name="action_network_music">Music Service</string>
    <string name="action_cloudinary">Subir canción</string>

    <!-- ACTIVITY [ Create Song ] -->
    <string name="create_song_titulo">Título</string>
    <string name="create_song_genre">Género</string>
    <string name="create_song_artist">Author/a</string>
    <string name="create_song_file">Buscar fichero</string>


    <!-- ACTIVITY [ New Playlist ] -->
    <string name="new_playlist_name">New Playlist</string>
    <string name="new_playlist_title">Title</string>
    <string name="new_playlist_description">Description</string>
    <string name="new_playlist_button">Create Playlist</string>
    <string name="new_playlist_creation_success">Your playlist has been created!</string>
    <string name="new_playlist_creation_failure">Something went wrong</string>
    <string name="new_playlist_not_complete">You have to add a title for your playlist!</string>

    <!-- ACTIVITY [ Playlist ] -->
    <string name="playlist_follow">Follow</string>
    <string name="playlist_edit">Edit</string>
    <string name="playlist_no_tracks">No tracks added yet</string>
    <string name="playlist_following">Following</string>
    <string name="playlist_creation_failure">Something went wrong</string>


    <!-- ACTIVITY [ Edit Playlist ] -->
    <string name="edit_playlist_name">Edit Playlist</string>
    <string name="edit_playlist_title">Title</string>
    <string name="edit_playlist_description">Description</string>
    <string name="edit_playlist_add">Add Songs</string>
    <string name="edit_playlist_save">Save</string>
    <string name="edit_playlist_creation_success">Your changes have been saved!</string>
    <string name="edit_playlist_creation_failure">Something went wrong</string>

    <!-- ACTIVITY [ Add Songs To Playlist ] -->
    <string name="add_songs_to_playlist_title">Add songs</string>
    <string name="add_song_to_playlist_button">Save</string>
    <string name="add_songs_to_playlist_lastitem_title">New Track</string>
    <string name="add_songs_to_playlist_lastitem_author">From you</string>

    <!-- URL -->
    <string name="url_static">Static URL Playback</string>


    <!-- INFO STATE -->
    <string name="state_wait">Please wait..</string>
    <string name="state_task_in_progress">Task in process</string>

    <string name="state_error_connexion">Error de conexión!</string>
    <string name="state_success_title">Éxito</string>
    <string name="state_task_completed">Tarea completada con éxito!</string>
    <string name="state_error_title">Error</string>
    <string name="state_connected">Conectado</string>
    <string name="state_error_default">Algo salió mal!</string>
    <string name="state_with_connection">Connection with Backend</string>
    <string name="staitc_without_connection"> Without Connection</string>


    <!-- ACTIVITY [ Login ] -->
    <string name="login_username">Username</string>
    <string name="login">Login</string>
    <string name="login_password">Password</string>
    <!-- <string name="login_email">Email</string> -->
    <!-- <string name="login_signUpQuestionButton">New here? Sign up now!</string> -->
    <!-- <string name="login_register_here">Register here</string> -->
    <string name="LoginQuestion_start_text">New here?</string>
    <string name="Login_SignUp_Question_button">Sign up now!</string>
    <string name="splashScreen_logging_in">Logging in…</string>

    <!-- ACTIVITY [ Sign Up ] -->
    <string name="SignUp_username">Username</string>
    <string name="SignUp_email">Email</string>
    <string name="SignUp_password">Password</string>
    <string name="SignUp_repeat_password">Repeat Password</string>
    <string name="SignUpQuestion_start_text">Already have an account?</string>
    <string name="SignUp_Login_Question_button">Sign in now!</string>

    <!-- ACTIVITY [ Upload Song ] -->
    <string name="upload_song">Upload Song</string>
    <string name="label_name">Name</string>
    <string name="label_artist">Artist</string>
    <string name="label_file_btn">Choose audio file</string>
    <string name="upload_song_not_complete">You have to add an audio file for your playlist!</string>
    <string name="label_genre">Genre</string>
    <string name="btn_upload">Upload</string>
    <string name="upload_genre_placeholder">Hardstyle</string>
    <string name="upload_song_creation_success">Your track has been uploaded!</string>
    <!--  cambiar este placeholder dinamicamente  -->

    <!-- ACTIVITY [ Edit Song ] -->
    <string name="edit_song">Edit Song</string>
    <string name="edit_song_update_success">Your changes have been saved!</string>
    <string name="btn_save">Save</string>
    <!-- FOLLOWING BUTTON -->
    <string name="ToFollowText">Follow</string>
    <string name="FollowingText">Following</string>

    <!-- ADD TO PLAYLIST-->
    <string name="add_to_playlist_title">Add to playlist</string>
    <string name="add_to_playlist_button">Add to playlist</string>
    <string name="content_description_item_add_to_playlist_photo">PlaylistImage</string>
    <string name="add_to_playlist_lastitem_title">New Playlist</string>
    <string name="add_to_playlist_lastitem_author">From you</string>
    <string name="default_nfollowers">1M followers</string>
    <string name="SeeMoreSection"><![CDATA[See all >]]></string>
    <string name="default_timePassed">posted a song 1h ago</string>
    <string name="default_numOfLikes">1M</string>
    <string name="music_player_title">Orange Heart</string>
    <string name="music_player_author">Headhunterz</string>
    <string name="music_player_left_number">0:0</string>
    <string name="action_settings">Settings</string>

    <!-- FRAGMENT [ Song Details ] -->
    <string name="likeBottomMenu">Like</string>
    <string name="showArtistBottomMenu">Show Artist</string>
    <string name="DeleteBottomMenu">Delete</string>
    <string name="RemoveFromPlaylistBottomMenu">Remove from playlist</string>
    <string name="EditBottomMenu">Edit</string>
    <string name="ShareBottomMenu">Share</string>
    <string name="home_new_playlists_title">Popular Playlists</string>
    <string name="default_home_songs_title">Popular Tracks</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Settings_title">Settings</string>
    <string name="Stats_title">Statistics</string>
    <string name="EditAccount_title">Edit Account</string>
    <string name="logoDescription">Company Logo</string>

    <string name="GotoSymbol"><![CDATA[>]]></string>
    <string name="optionViewStats">Sallefy statistics</string>
    <string name="optionModifyAccount">Edit account</string>
    <string name="optionDeleteAccount">Delete account</string>
    <string name="optionLogOut">Log Out</string>
    <string name="no_tracks_on_social">The people you follow haven\'t uploaded anything yet.</string>
    <string name="no_users_on_social">You are not following anyone. Please, follow some users to see their activity!</string>

    <!--Error messages-->
    <string name="error_like">Can\'t like now, try later…</string>
    <string name="error_follow">Can\'t follow now, try later…</string>
    <string name="ServiceNotLoadedError">Can\'t do that now, try again later…</string>
    <string name="NoContentAvailableMeUsers">You don\'t follow any user.</string>
    <string name="NoContentAvailableMeSongs">You haven\'t uploaded any song.</string>
    <string name="NoContentAvailableMePlayists">You haven\'t created any playlist.</string>
    <string name="LoadingMe">Loading…</string>
    <string name="new_playlist_creation_failure_cloudinary">Something went wrong on Cloudinary Server</string>
    <string name="delete_btn">DELETE</string>
    <string name="User_has_no_songs">User don\'t have songs</string>
    <string name="label_choose_graph_button">Choose another graph</string>
    <string name="UserDontFollowAnyone">This user don\'t follow any user.</string>

</resources>
