<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"

        android:title="@string/menu_home"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_social"
        android:enabled="true"

        android:title="@string/menu_social"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_me"
        android:enabled="true"
        android:title="@string/menu_me"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title=""
        android:paddingTop="50dp"
        app:showAsAction="ifRoom" />
</menu>