<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sallefy"/>

    <TextView
        style="@style/TitlesTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center|center_horizontal"
        android:text="@string/action_signUp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                style="@style/formLabel"/>

            <EditText
                android:id="@+id/Signup_user"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="14dp"
                android:background="@color/colorLoginGrey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignUp_email"
                style="@style/formLabel"/>

            <EditText
                android:id="@+id/email_user"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="14dp"
                android:background="@color/colorLoginGrey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/formLabel"
                android:text="@string/SignUp_password"/>

            <EditText
                android:id="@+id/SignUp_password"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="14dp"
                android:background="@color/colorLoginGrey"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/formLabel"
                android:text="@string/SignUp_repeat_password"/>

            <EditText
                android:id="@+id/SignUp_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="14dp"
                android:background="@color/colorLoginGrey"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/signUp_btn_action"
                style="@style/buttonText"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="37dp"
                android:background="@drawable/login_btn"
                android:minWidth="200dp"
                android:text="@string/action_signUp"
                android:textColor="@color/colorWhite" />
            <LinearLayout
                android:layout_marginTop="26dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/SignUpQuestion_start_text"/>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/SignUp_btn_LoginNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="12sp"
                    android:text="@string/SignUp_Login_Question_button"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>