<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|bottom"
    android:background="@drawable/bottom_sheet"
    android:clipToPadding="false"
    android:elevation="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_drag_handle_black_24dp">
    </ImageView>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="30dp">

    <LinearLayout

        android:id="@+id/bottom_menu_a_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/bottom_menu_like_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_favorite_border_black_24dp"
            android:orientation="horizontal" />

        <TextView
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"
            android:text="@string/likeBottomMenu" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/bottom_menu_a_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:padding="16dp">
        android:layout_marginLeft="30dp"

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_share_black_24dp"
            android:id="@+id/bottom_menu_a_share_img"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/bottom_menu_a_share_text"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"
            android:text="@string/ShareBottomMenu" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/bottom_menu_a_addtoPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add_black_24dp"
            android:orientation="horizontal" />

        <TextView
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"
            android:text="@string/add_to_playlist_button" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/bottom_menu_a_showArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_person"
            android:orientation="horizontal" />

        <TextView
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"
            android:text="@string/showArtistBottomMenu" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/bottom_menu_a_editSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/bottom_menu_a_editSong_img"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/bottom_menu_a_editSong_text"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"
            android:text="@string/EditBottomMenu" />

    </LinearLayout>
    <LinearLayout

        android:id="@+id/bottom_menu_a_deleteSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_delete_black"
            android:id="@+id/bottom_menu_a_delete_img"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/bottom_menu_a_delete_text"
            style="@style/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"
            android:text="@string/DeleteBottomMenu" />

    </LinearLayout>
</LinearLayout>
</LinearLayout>