<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <ImageButton
        android:id="@+id/new_playlist_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow"
        android:tint="@color/colorBlack"
        android:background="#00000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="start|start"/>

    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist_name"
        style="@style/TitlesTheme"/>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/item_song_image_size"
        android:layout_height="@dimen/item_song_image_size"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/new_playlist_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chooseimage"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_playlist_title"
                style="@style/formLabel"/>

            <EditText
                android:id="@+id/new_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorLoginGrey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_playlist_description"
                style="@style/formLabel"/>

            <EditText
                android:id="@+id/new_playlist_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@color/colorLoginGrey"/>


        </LinearLayout>


        <Button
            android:id="@+id/new_playlist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn"
            android:text="@string/new_playlist_button"
            style="@style/buttonText"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>