<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/edit_playlist_nav"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        app:elevation="0dp"
        app:itemIconTint="@color/colorBlack"
        app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
        app:itemTextAppearanceInactive="@style/BottomNavigationView"
        app:labelVisibilityMode="labeled"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/nav_back"
        tools:layout_editor_absoluteX="0dp"/>


    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_playlist_name"
        style="@style/TitlesTheme"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/edit_playlist_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_playlist_cover"/>

        <ImageView
            android:id="@+id/imagePlayIcon"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@id/edit_playlist_img"
            android:layout_alignEnd="@id/edit_playlist_img"

            android:src="@drawable/ic_edit" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_playlist_title"
                style="@style/formLabel"/>

            <EditText
                android:id="@+id/edit_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorLoginGrey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_playlist_description"
                style="@style/formLabel"/>

            <EditText
                android:id="@+id/edit_playlist_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:background="@color/colorLoginGrey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/edit_playlist_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/login_btn"
                android:text="@string/edit_playlist_add"
                style="@style/buttonText"/>

            <Button
                android:id="@+id/edit_playlist_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/login_btn"
                android:text="@string/edit_playlist_save"
                style="@style/buttonText"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>