<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_user_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/mtrl_card_spacing"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="#00FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/VerticalItemThumbnailCircular"
            android:radius="46dp"
            android:elevation="10dp"
            android:clipToPadding="false">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/item_track_size"
                android:layout_height="@dimen/item_track_size">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/item_track_size"
                    android:layout_height="@dimen/item_track_size"
                    android:layout_margin="0dp"
                    app:cardCornerRadius="32dp">

                    <ImageView
                        android:id="@+id/item_user_photo"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_user_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:ellipsize="end"
                android:maxLines="1"
                style="@style/TrackTheme"
                android:text="@string/default_username"/>

            <TextView
                android:id="@+id/item_user_nfollowers"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:maxLines="1"
                style="@style/SubTitlesTheme"
                android:text="@string/default_nfollowers"/>

        </LinearLayout>

        <Button
            android:id="@+id/user_following_button"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_margin="9dp"
            android:text="@string/ToFollowText"
            android:textAllCaps="false"
            style="@style/ToFollowButton">
        </Button>

    </LinearLayout>

</LinearLayout>